# libs/api/categories/src/lib/categories.controller.ts
@@ -1,8 +1,14 @@
-import { Controller, Get } from '@nestjs/common';
-import { ApiOkResponse, ApiTags } from '@nestjs/swagger';
+import { Body, Controller, Get, Post } from '@nestjs/common';
+import {
+  ApiBadRequestResponse,
+  ApiCreatedResponse,
+  ApiNotFoundResponse,
+  ApiOperation,
+  ApiTags,
+} from '@nestjs/swagger';
 import { CategoriesService } from './categories.service';
-
 import { Category } from '../entities/select-category.entity';
+import { CreateCategoryDto } from '../dtos/create-category.dto';
 
 @ApiTags('categories')
 @Controller('categories')
@@ -10,15 +16,17 @@ export class CategoriesController {
   constructor(private readonly categoriesService: CategoriesService) {}
 
   @Get()
-  @ApiOkResponse({ type: [Category] })
-  find() {
+  @ApiOperation({ operationId: 'findCategory' })
+  @ApiNotFoundResponse()
+  find(): Promise<Category[]> {
     return this.categoriesService.find();
   }
 
-  // @Post()
-  // @ApiOperation({ operationId: 'createCategory' })
-  // @ApiCreatedResponse({ type: Category })
-  // create(@Body() createCategoryDto: CreateCategoryDto) {
-  //   return this.categoriesService.create(createCategoryDto);
-  // }
+  @Post()
+  @ApiOperation({ operationId: 'createCategory' })
+  @ApiCreatedResponse({ type: Category })
+  @ApiBadRequestResponse()
+  create(@Body() createCategoryDto: CreateCategoryDto) {
+    return this.categoriesService.create(createCategoryDto);
+  }
 }
