# openapi.json
@@ -3,7 +3,8 @@
   "paths": {
     "/categories": {
       "get": {
-        "operationId": "CategoriesController_find",
+        "operationId": "findCategory",
+        "summary": "",
         "parameters": [],
         "responses": {
           "200": {
@@ -18,6 +19,42 @@
                 }
               }
             }
+          },
+          "404": {
+            "description": ""
+          }
+        },
+        "tags": [
+          "categories"
+        ]
+      },
+      "post": {
+        "operationId": "createCategory",
+        "summary": "",
+        "parameters": [],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateCategoryDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Category"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": ""
           }
         },
         "tags": [
@@ -339,14 +376,7 @@
         ],
         "responses": {
           "200": {
-            "description": "",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Product"
-                }
-              }
-            }
+            "description": ""
           },
           "404": {
             "description": "Product not found"
@@ -447,6 +477,17 @@
           "categoryId",
           "name",
           "createdAt"
+        ]
+      },
+      "CreateCategoryDto": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "name"
         ]
       },
       "RegisterDto": {
@@ -659,6 +700,9 @@
           "name": {
             "type": "string"
           },
+          "image": {
+            "type": "string"
+          },
           "seller": {
             "$ref": "#/components/schemas/User"
           },
@@ -677,6 +721,7 @@
           "productId",
           "category",
           "name",
+          "image",
           "seller",
           "records",
           "createdAt"
@@ -685,42 +730,45 @@
       "CreateProductDto": {
         "type": "object",
         "properties": {
-          "categoryId": {
+          "userId": {
             "type": "number"
           },
           "name": {
             "type": "string"
           },
+          "image": {
+            "type": "string"
+          },
+          "categoryId": {
+            "type": "number"
+          },
           "records": {
+            "default": [],
             "type": "array",
             "items": {
-              "type": "string"
+              "type": "object"
             }
           }
         },
         "required": [
-          "categoryId",
+          "userId",
           "name",
+          "image",
+          "categoryId",
           "records"
         ]
       },
       "UpdateProductDto": {
         "type": "object",
         "properties": {
-          "name": {
-            "type": "string"
-          },
           "categoryId": {
             "type": "number"
           },
-          "price": {
-            "type": "number"
+          "name": {
+            "type": "string"
           },
-          "records": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
+          "image": {
+            "type": "string"
           }
         }
       }
